--- a/combinatorSelectors.html
+++ b/combinatorSelectors.html
@@ -3,14 +3,14 @@
 <!-- combinator selectors
 1.Descendant Selector:
 The descendant selector matches all elements that are descendants of a specified element. -->
-<!-- <div>
+ <div>
     <p>jh</p>
     <p>kijij</p>
     <h1><p>hsbibui</p></h1>
-</div> -->
+</div> 
 
 
-<!-- <div>
+ <div>
     <p>vvv</p>
     <p>nnn</p>
     <section>
@@ -24,12 +24,12 @@ The descendant selector matches all elements that are descendants of a specified
     <p>nnn</p> 
     <p>vvv</p>
     <p>nnn</p>
-</div> -->
+</div> 
 
-<!-- 
+
 <div>
     <h1>knjdzn</h1>
-</div> -->
+</div> 
 
 <h2>dboidvoidvoivo</h2>
 <h2>dboidvoid dgdvoivo</h2>
