--- a/Properties.html
+++ b/Properties.html
@@ -10,16 +10,16 @@
         <th class="table-main table-heading">Address</th>
     </tr>
     <tr>
-        <td class="table-main table-data">Poonam</td>
-         <td class="table-main table-data">989898988</td>
-         <td class="table-main table-data">poonam@gmail.com</td>
-         <td class="table-main table-data">Mumbai</td>
+        <td class="table-main table-data">Pradip kakde</td>
+         <td class="table-main table-data">9049069988</td>
+         <td class="table-main table-data">kakde.pradip1@gmail.com</td>
+         <td class="table-main table-data">Chatrapati Sambhajinagar</td>
     </tr>
     <tr>
-        <td class="table-main table-data">Pooja</td>
-         <td class="table-main table-data">989898988</td>
-         <td class="table-main table-data">poonam@gmail.com</td>
-         <td class="table-main table-data">Mumbai</td>
+        <td class="table-main table-data">Pravin</td>
+         <td class="table-main table-data">9373614030</td>
+         <td class="table-main table-data">pravin@gmail.com</td>
+         <td class="table-main table-data">Pune</td>
     </tr>
   
         
